--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -26,27 +26,32 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
-  position: relative;
+  /* position: relative; */
+  gap: 20px;
   margin-bottom: 20px;
 }
 
 .logo {
-  position: absolute;
+  /* position: absolute; */
   height: 100px;
   width: auto;
+  margin-right: 10px;
+  /* margin-top: 50px; */
+  /* margin-bottom: 50px; */
 }
 
 .title {
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
-  background: linear-gradient(to right, yellow);
+  background: linear-gradient(to right, black);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  margin-top: 10px;
 }
 
 h1 {
